Update memoryConfig.sh