@@ -1,17 +1,78 @@
-if [ "x$JBOSS_MODULES_SYSTEM_PKGS" = "x" ]; then
-   JBOSS_MODULES_SYSTEM_PKGS="org.jboss.byteman,org.jboss.logmanager"
-fi
-source /etc/jelastic/environment;
-source $OPENSHIFT_CARTRIDGE_SDK_BASH
+#!/bin/bash        
 
-if [ -e /opt/repo/versions/${Version}/bin/variablesparser.sh ]; then
-      . /opt/repo/versions/${Version}/bin/variablesparser.sh
+if ! `echo $JAVA_OPTS | grep -q "\-Xms[[:digit:]\.]"`
+then
+        [ -z "$XMS" ] && { XMS="-Xms32M"; }
+        JAVA_OPTS=$JAVA_OPTS" $XMS"; 
 fi
 
-JAVA_OPTS="${JAVA_OPTS} -DOPENSHIFT_APP_UUID=${OPENSHIFT_APP_UUID} -Xbootclasspath/p:/opt/repo/versions/${Version}/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-1.5.2.Final.jar -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dorg.jboss.resolver.warning=true -Djava.net.preferIPv4Stack=true -Dfile.encoding=UTF-8 -Djboss.node.name=$(hostname) -Djgroups.bind_addr=${OPENSHIFT_JBOSSAS_IP} -Dorg.apache.coyote.http11.Http11Protocol.COMPRESSION=on"
-
-if [ ! -z "$ENABLE_JPDA" ]; then
-   JAVA_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,address=${OPENSHIFT_WILDFLY_IP}:8787,server=y,suspend=n ${JAVA_OPTS}"
+if ! `echo $JAVA_OPTS | grep -q "\-Xmn[[:digit:]\.]"`
+then
+        [ -z "$XMN" ] && { XMN="-Xmn30M"; }
+        JAVA_OPTS=$JAVA_OPTS" $XMN"; 
 fi
 
-JAVA_OPTS="$JAVA_OPTS -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS -Djava.awt.headless=true"
+if ! `echo $JAVA_OPTS | grep -q "\-Xmx[[:digit:]\.]"`
+then
+        [ -z "$XMX" ] && {
+        	#optimal XMX = 80% * total available RAM
+        	#it differs a little bit from default values -Xmx http://docs.oracle.com/cd/E13150_01/jrockit_jvm/jrockit/jrdocs/refman/optionX.html
+        	memory_total=`free -m | grep Mem | awk '{print $2}'`;
+        	let XMX=memory_total*8/10;
+        	XMX="-Xmx${XMX}M";
+        }
+        JAVA_OPTS=$JAVA_OPTS" $XMX";
+fi
+
+if ! `echo $JAVA_OPTS | grep -q "\-Xminf[[:digit:]\.]"`
+then
+        [ -z "$XMINF" ] && { XMINF="-Xminf0.1"; }
+        JAVA_OPTS=$JAVA_OPTS" $XMINF"; 
+fi
+
+if ! `echo $JAVA_OPTS | grep -q "\-Xmaxf[[:digit:]\.]"`
+then
+        [ -z "$XMAXF" ] && { XMAXF="-Xmaxf0.3"; }
+        JAVA_OPTS=$JAVA_OPTS" $XMAXF"; 
+fi
+
+XMX_VALUE=`echo $XMX | grep -o "[0-9]*"`;
+XMX_UNIT=`echo $XMX | sed "s/-Xmx//g" | grep -io "g\|m"`;
+[ $XMX_UNIT == "g" -o $XMX_UNIT == "G" ] && { let XMX_VALUE=$XMX_VALUE*1024; } 
+
+JAVA_VERSION=$(java -version 2>&1 | grep version |  awk -F '.' '{print $2}')
+
+if ! `echo $JAVA_OPTS | grep -q "\-XX:MaxPermSize"`
+then
+        [ -z "$MAXPERMSIZE" ] && { 
+        	# if java version <= 7 then configure MaxPermSize otherwise ignore 
+        	[ $JAVA_VERSION -le 7 ] && {
+			let MAXPERMSIZE_VALUE=$XMX_VALUE/10; 
+        		[ $MAXPERMSIZE_VALUE -ge 64 ] && {
+				[ $MAXPERMSIZE_VALUE -gt 256 ] && { MAXPERMSIZE_VALUE=256; }
+				MAXPERMSIZE="-XX:MaxPermSize=${MAXPERMSIZE_VALUE}M";
+                	}
+		}
+  	}
+        JAVA_OPTS=$JAVA_OPTS" $MAXPERMSIZE";
+fi
+ 
+if ! `echo $JAVA_OPTS | grep -q "\-XX:+Use.*GC"`
+then	
+	[ -z "$GC" ] && {  
+        	[ $JAVA_VERSION -le 7 ] && {
+       			GC_LIMMIT=8000;
+	    		[ "$XMX_VALUE" -ge "$GC_LIMMIT" ] && GC="-XX:+UseG1GC" || GC="-XX:+UseParNewGC";
+	    	} || {
+	    		GC="-XX:+UseG1GC";
+	    	}
+     	}
+        JAVA_OPTS=$JAVA_OPTS" $GC"; 
+fi 
+   
+if ! `echo $JAVA_OPTS | grep -q "UseCompressedOops"`
+then
+    	JAVA_OPTS=$JAVA_OPTS" -XX:+UseCompressedOops"
+fi
+
+export JAVA_OPTS
